--- a/public/main.css
+++ b/public/main.css
@@ -4,23 +4,26 @@ html, body {
 }
 
 #homebody {
-	background:url("images/congruent_outline.png");
+	background:url("/images/backgroundimage.jpeg");
 	background-size: cover;
     background-repeat: no-repeat;
     height:1000px;
 	width:auto;
-	margin: 0 auto;
+	/*margin:0 auto;*/
 }
 
 #loginbox {
 	background-color:white;
 	opacity:0.3;
-	text-align:center;
+	margin:auto;
+	float:center center;
+	color:black;
 	width:300px;
 	height:300px;
-
 }
 
-#form {
-	opacity:1;
+#logininfo {
+	text-align:center;
+	vertical-align: middle;
+	font-family: 'Raleway', sans-serif;
 }
