--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -7,13 +7,13 @@ html
 		h1 Create an Account 
 		form#formtwo(name="form" method="post" action="/registeruser")
 			label Username:
-			input#registeruser(type="text" name="registername" placeholder="username")
+			input#registeruser(type="text" name="registername" placeholder="username" required)
 			br
 			label Email:
-			input#registeremail(type="text", name="registeremail", placeholder="example@email.com")
+			input#registeremail(type="text", name="registeremail", placeholder="example@email.com" required)
 			br
 			label Password:
-			input#registerpassword(type="password" name="registerpassword" placeholder="password")
+			input#registerpassword(type="password" name="registerpassword" placeholder="password" required)
 			br
 			br
 			button(type="submit") Submit 
