--- a/src/views/blogwall.pug
+++ b/src/views/blogwall.pug
@@ -13,6 +13,9 @@ html
 					br
 					li=post.blogs
 					br
+					li=info.comments
+					br
+					li=info.users
 					br
 					form(name="form" method="post" action="/comments")
 						label Comment:
