--- a/src/views/profileposts.pug
+++ b/src/views/profileposts.pug
@@ -2,6 +2,12 @@ doctype
 html
 	head
 		title Profile: Posts
+		link(rel="stylesheet" href="./main.css" type="text/css")
+		link(href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
+
 	body
 		div#yourblogs
 			each personalpost in list
@@ -12,3 +18,7 @@ html
 				br
 				li=personalpost.blogs
 				br
+
+
+		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
+		script(type="text/javascript" src="js/materialize.min.js")
