--- a/public/main.css
+++ b/public/main.css
@@ -4,26 +4,28 @@ html, body {
 }
 
 #homebody {
-	background:url("/images/backgroundpic.jpg");
+/*	background:url("/images/backgroundpic.jpg");*/
 	background-size: cover;
     background-repeat: no-repeat;
-    height:1000px;
 	width:auto;
-	/*margin:0 auto;*/
+	margin:0 auto;
 }
 
-#loginbox {
+.options {
+	text-align:center;
+}
+
+.formbox{
 	background-color:white;
-	opacity:0.4;
-	margin:auto;
-	float:center center;
 	width:350px;
 	height:300px;
-	margin-top:200px;
+	margin-top:100px;
+	margin-left:600px;
+	font-family: 'Raleway', sans-serif;
+	text-align:center;
 }
 
-#logininfo {
-	text-align:center;
-	vertical-align: middle;
-	font-family: 'Raleway', sans-serif;
+#button {
+	margin-left:100px;
 }
+
