--- a/src/views/blogwall.pug
+++ b/src/views/blogwall.pug
@@ -1,7 +1,12 @@
 doctype
 html 
 	head
-		title 
+		title Wall
+		link(rel="stylesheet" href="./main.css" type="text/css")
+		link(href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet")
+		link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css")
+		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 	body
 		div#allblogs
 			h1#walltitle The Wall 
@@ -28,6 +33,9 @@ html
 				button.button(type=button) Return Back
 				
 
+
+		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
+		script(type="text/javascript" src="js/materialize.min.js")
 
 
 		
