--- a/public/main.css
+++ b/public/main.css
@@ -4,25 +4,33 @@ html, body {
 }
 
 #homebody {
-/*	background:url("/images/backgroundpic.jpg");*/
 	background-size: cover;
     background-repeat: no-repeat;
 	width:auto;
+	height:1000px;
 	margin:0 auto;
+}
+
+#spotlight {
+	font-size:30px;
+	font-family: 'Raleway', sans-serif;
+	text-transform:uppercase;
+
 }
 
 .options {
 	text-align:center;
 }
+ 
 
-.formbox{
+#form{
 	background-color:white;
 	width:350px;
 	height:300px;
 	margin-top:100px;
 	margin-left:600px;
-	font-family: 'Raleway', sans-serif;
 	text-align:center;
+	font-family: 'Raleway', sans-serif;
 }
 
 #button {
