--- a/public/main.css
+++ b/public/main.css
@@ -3,19 +3,11 @@ html, body {
 	padding:0;
 }
 
-#homebody {
-	background-size: cover;
-    background-repeat: no-repeat;
-	width:auto;
-	height:1000px;
-	margin:0 auto;
-}
-
+/* INDEX */
 #spotlight {
 	font-size:30px;
 	font-family: 'Raleway', sans-serif;
 	text-transform:uppercase;
-
 }
 
 .options {
@@ -27,13 +19,28 @@ html, body {
 	background-color:white;
 	width:350px;
 	height:300px;
-	margin-top:100px;
+	margin-top:50px;
 	margin-left:600px;
 	text-align:center;
 	font-family: 'Raleway', sans-serif;
 }
 
+#footer {
+	text-transform: uppercase;
+	font-size:20px;
+}
+
 #button {
 	margin-left:100px;
+	font-family: 'Raleway', sans-serif;
+}
+
+
+/*REGISTER*/
+
+#spotlighttwo {
+	font-size:30px;
+	font-family: 'Raleway', sans-serif;
+	text-transform:uppercase;
 }
 
