--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -9,10 +9,13 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 	body
 		header
-			nav.pink.white-text.center Spotlight
+			nav.white.black-text.center(id="spotlighttwo") Spotlight Blog
+				a(href="/").brand-logo.black-text.right Login
+		.rows
+			img#image(src="/images/backgroundimagetwo.png").col.s12
 		.formbox
 			form(name="form" method="post" action="/registeruser")
-				h1 	Create an Account
+				h2 Create an Account
 				br
 				br
 				label Username:
@@ -25,8 +28,19 @@ html
 				input#registerpassword(type="password" name="registerpassword" placeholder="password" required)
 				br
 				br
-				button#button(type="submit").btn.waves-effect.waves-light Submit 
+				button#button(type="submit").btn.amber.lighten-2.waves-effect.waves-light.black-text Submit 
 						i.material-icons.right send 
+		br
+		br
+		br
+		br
+		br
+		br
+		.rows
+			img(src="/images/backgroundimage.png").col
+		footer
+			nav.white.black-text.center.upper(id="footer") Connect with other artists around the world
+
 
 		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(type="text/javascript" src="js/materialize.min.js")
