--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -9,10 +9,10 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 	body
 		header
-			nav.white.black-text.center(id="spotlighttwo") Spotlight Blog
+			nav.white.black-text.center(id="spotlight") Spotlight blog
 				a(href="/").brand-logo.black-text.right Login
 		.rows
-			img#image(src="/images/backgroundimagetwo.png").col.s12
+			img#image(src="/images/backgroundimage.png").col.s12
 		.formbox
 			form(name="form" method="post" action="/registeruser")
 				h2 Create an Account
