--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -12,7 +12,7 @@ html
 			nav.white.black-text.center(id="spotlight") Spotlight blog
 				a(href="register/new").brand-logo.black-text.right Register
 		.rows
-			img#image(src="/images/backgroundimagetwo.png").col.s12
+			img#image(src="/images/backgroundimagetwo.png").col.s12.responsive-img
 		.options
 			if user
 				a(href='/profile/' + user.id) View profile
@@ -42,12 +42,11 @@ html
 			br
 			br
 			br
+			br
 			.rows
 				img(src="/images/backgroundimage.png").col.s12
 		footer
 			nav.white.black-text.center.upper(id="footer") Connect with other artists around the world
-
-
 
 		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(type="text/javascript" src="js/materialize.min.js")
