--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -9,7 +9,7 @@ html
 		meta(name="viewport" content="width=device-width, initial-scale=1.0")
 	body
 		header
-			nav.white.black-text.center(id="spotlight") Spotlight blog
+			nav.white.black-text.center.spotlight Spotlight blog
 				a(href="register/new").brand-logo.black-text.right Register
 		.rows
 			img#image(src="/images/backgroundimagetwo.png").col.s12.responsive-img
@@ -43,10 +43,11 @@ html
 			br
 			br
 			br
+			br
 			.rows
 				img(src="/images/backgroundimage.png").col.s12
 		footer
-			nav.white.black-text.center.upper(id="footer") Connect with other artists around the world
+			nav.white.black-text.center(id="footer") Connect with other artists around the world
 
 		script(type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js")
 		script(type="text/javascript" src="js/materialize.min.js")
