--- a/src/views/register.pug
+++ b/src/views/register.pug
@@ -2,7 +2,7 @@ doctype
 html
 	head
 		title Register User
-		link(rel="stylesheet" href="./main.css" type="text/css")
+		link(rel="stylesheet" href="main.css" type="text/css")
 		link(href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet")
 		link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
 		link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.99.0/css/materialize.min.css")
